--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,8 @@ pipeline {
         }
         stage('Run Unit Tests') {
             steps {
-                sh 'python -m unittest test_api.py'
+                sh 'pip install -r requirement.txt'
+                sh 'python test_main.py'
             }
         }
         stage('Build Docker Image') {
