--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,8 +17,11 @@ pipeline {
         stage('Run Unit Tests') {
             agent { label 'vm2' }
             steps {
-                sh 'pip install -r requirement.txt'
-                sh 'python3 test_main.py'
+                sh '''
+                python3 -m venv venv
+                source venv/bin/activate
+                pip install -r requirement.txt
+                '''
             }
         }
         stage('Build Docker Image') {
