--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,23 +11,33 @@ pipeline {
         stage('Clone Repo') {
             agent { label 'vm2' }
             steps {
-                git branch: 'main', url: 'https://github.com/nnongta/api-test.git'
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]) {
+                    sh '''
+                    git clone https://$USERNAME:$TOKEN@github.com/nnongta/api-test.git
+                    cd api-test
+                    git checkout main
+                    '''
+                }
             }
         }
         stage('Run Unit Tests') {
             agent { label 'vm2' }
             steps {
                 sh '''
+                cd api-test
                 python3 -m venv venv
-                . venv/bin/activate
-                pip install -r requirement.txt
+                source venv/bin/activate
+                pip install -r requirements.txt
                 '''
             }
         }
         stage('Build Docker Image') {
             agent { label 'vm2' }
             steps {
-                sh 'docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .'
+                sh '''
+                cd api-test
+                docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+                '''
             }
         }
         stage('Push to Registry') {
@@ -47,18 +57,23 @@ pipeline {
             steps {
                 sh '''
                 docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-                docker run -d -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                docker stop simple-api-container || true
+                docker rm -f simple-api-container || true
+                docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
                 '''
             }
         }
         stage('Run Robot Tests on VM2') {
             agent { label 'vm2' }
             steps {
-                sh '''
-                git clone https://github.com/yourusername/robot-tests.git
-                cd robot-tests
-                robot test_plus.robot
-                '''
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]) {
+                    sh '''
+                    rm -rf robot-tests
+                    git clone https://$USERNAME:$TOKEN@github.com/yourusername/robot-tests.git
+                    cd robot-tests
+                    robot test_plus.robot
+                    '''
+                }
             }
         }
         stage('Deploy to VM3 (Pre-Prod)') {
@@ -66,7 +81,9 @@ pipeline {
             steps {
                 sh '''
                 docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-                docker run -d -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                docker stop simple-api-container || true
+                docker rm -f simple-api-container || true
+                docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
                 '''
             }
         }
