--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stages {
         stage('Install & Run Unittest') {
             steps {
-                sh "pip install -r requirements.txt"
+                sh "pip install -r requirement.txt"
                 sh "python3 unit_test.py"
             }
         }
