--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,15 +14,11 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 sh """
-                    python3 -m venv venv
-                    source venv/bin/activate
-                    pip install --upgrade pip
-                    pip install -r requirement.txt
+                    which python3 || sudo apt update && sudo apt install -y python3 python3-pip
+                    which docker || sudo apt update && sudo apt install -y docker.io
                 """
-            }   
+            }
         }
-
-
 
         stage('Install & Run Unittest') {
             steps {
