--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,69 +6,88 @@ pipeline {
         REGISTRY = "ghcr.io/nnongta"
         IMAGE_NAME = "simple-api"
         IMAGE_TAG = "latest"
-        ROBOT_REPO = 'https://github.com/nnongta/jenkins-robot'
-        ROBOT_BRANCH = 'main'
     }
-    
     stages {
-        stage('Install Dependencies') {
+        stage('Clone Repo') {
+            agent { label 'vm2' }
             steps {
-                sh """
-                    which python3 || sudo apt update && sudo apt install -y python3 python3-pip
-                    which docker || sudo apt update && sudo apt install -y docker.io
-                """
-            }
-        }
-
-        stage('Install & Run Unittest') {
-            steps {
-                sh "pipx install -r requirement.txt"
-                sh "python3 unit_test.py"
-            }
-        }
-
-        stage('Create Image') {
-            steps {
-                sh "docker build -t ${IMAGE_NAME}:${BUILD_ID} ."
-            }
-        }
-
-        stage('Run Container & Run Robot Testing') {
-            steps {
-                sh "docker run -dp 5001:5001 --name ${IMAGE_NAME} ${IMAGE_NAME}:${BUILD_ID}"
-                git branch: "${ROBOT_BRANCH}", url: "${ROBOT_REPO}"
-                sh "robot plus.robot"
-            }
-
-            post {
-                always {
-                    sh "docker stop ${IMAGE_NAME} || true"
-                    sh "docker rm ${IMAGE_NAME} || true"
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]) {
+                    sh '''
+                    git clone https://$USERNAME:$TOKEN@github.com/nnongta/api-test.git
+                    cd api-test
+                    git checkout main
+                    '''
                 }
             }
         }
-
-        stage('Push to Registry') {
+        stage('Run Unit Tests') {
+            agent { label 'vm2' }
             steps {
-                sh 'echo $REGISTRY_CREDENTIALS_PSW | docker login ghcr.io -u $REGISTRY_CREDENTIALS_USR --password-stdin'
-                sh "docker push ${IMAGE_NAME}:${BUILD_ID}"
+                sh '''
+                cd api-test
+                python3 -m venv venv
+                source venv/bin/activate
+                pip install -r requirements.txt
+                '''
             }
         }
-
+        stage('Build Docker Image') {
+            agent { label 'vm2' }
+            steps {
+                sh '''
+                docker --version || { echo "Docker is not installed!"; exit 1; }
+                cd api-test
+                docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+                '''
+            }
+        }
+        stage('Push to Registry') {
+            agent { label 'vm2' }
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                    sh '''
+                    echo $PASSWORD | docker login ghcr.io -u $USERNAME --password-stdin
+                    for i in {1..3}; do
+                        docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG && break || sleep 10
+                    done
+                    '''
+                }
+            }
+        }
+        stage('Deploy to VM2') {
+            agent { label 'vm2' }
+            steps {
+                sh '''
+                docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                docker stop simple-api-container || true
+                docker rm -f simple-api-container || true
+                docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                '''
+            }
+        }
+        stage('Run Robot Tests on VM2') {
+            agent { label 'vm2' }
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]) {
+                    sh '''
+                    rm -rf robot-tests
+                    git clone https://$USERNAME:$TOKEN@github.com/yourusername/robot-tests.git
+                    cd robot-tests
+                    robot test_plus.robot || { echo "Robot tests failed"; exit 1; }
+                    '''
+                }
+            }
+        }
         stage('Deploy to VM3 (Pre-Prod)') {
             agent { label 'vm3' }
             steps {
-                sh "docker stop ${IMAGE_NAME} || true"
-                sh "docker rm ${IMAGE_NAME} || true"
-                sh 'echo $REGISTRY_CREDENTIALS_PSW | docker login ghcr.io -u $REGISTRY_CREDENTIALS_USR --password-stdin'
-                sh "docker run -dp 5001:5001 --name ${IMAGE_NAME} ${IMAGE_NAME}:${BUILD_ID}"
+                sh '''
+                docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                docker stop simple-api-container || true
+                docker rm -f simple-api-container || true
+                docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                '''
             }
-        }
-    }
-
-    post {
-        always {
-            sh "docker system prune -af || true"
         }
     }
 }
