--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,18 +8,18 @@ pipeline {
         IMAGE_TAG = "latest"
     }
     stages {
-        stage('Clone Repo') {
-            agent { label 'vm2' }
-            steps {
+        // stage('Clone Repo') {
+        //     agent { label 'vm2' }
+        //     steps {
                 
-                    sh '''
-                    rm -r api-test
-                    git clone https://github.com/nnongta/api-test.git
-                    cd api-test
-                    '''
+        //             sh '''
+        //             rm -r api-test
+        //             // git clone https://github.com/nnongta/api-test.git
+        //             cd api-test
+        //             '''
                 
-            }
-        }
+        //     }
+        // }
         stage('Run Unit Tests') {
             agent { label 'vm2' }
             steps {
