fix: stage run unit test

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,9 +25,7 @@ pipeline {
             steps {
                 sh '''
                 cd api-test
-                python3 -m venv venv
-                source venv/bin/activate
-                pip install -r requirements.txt
+                python unit_test.py
                 '''
             }
         }
