--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,6 +33,7 @@ pipeline {
             steps {
                 sh '''
                 cd api-test
+                docker run -d -p 5000:5000 ${IMAGE_NAME}
                 python unit_test.py
                 '''
             }
