--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label 'vm2'
+        label 'master'
     }
     environment {
         REGISTRY = "ghcr.io/nnongta"
@@ -22,6 +22,7 @@ pipeline {
         // }
 
         stage("Remove old images/containers"){
+        
             steps{
                 sh "docker stop \$(docker ps -a -q) || true"
                 sh "docker rm \$(docker ps -a -q) || true"
@@ -73,17 +74,21 @@ pipeline {
             }
         }
         stage('Deploy to VM2') {
+            agent { label 'vm2' }
             steps {
-                sh '''
-                docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-                docker stop simple-api-container || true
-                docker rm -f simple-api-container || true
-                docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-                '''
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]){
+                    sh '''
+                    docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                    docker stop simple-api-container || true
+                    docker rm -f simple-api-container || true
+                    docker run -d --name simple-api-container -p 5000:5000 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                    '''
+                }
+                
             }
         }
         stage('Run Robot Tests on VM2') {
-            
+            agent { label 'vm2' }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]) {
                     sh '''
