--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
                 cd api-test
                 docker run -d -p 5000:5000 ${IMAGE_NAME}
                 python3 -m venv venv
-                source ./venv/bin/activate
+                . ./venv/bin/activate
                 pip install -r requirement.txt
                 python3 unit_test.py
                 '''
