--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                 docker run -d -p 5000:5000 ${IMAGE_NAME}
                 python3 -m venv venv
                 . ./venv/bin/activate
-                pip install -r requirement.txt
+                pip install -r requirements.txt
                 python3 unit_test.py
                 '''
             }
