--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
                 . ./venv/bin/activate
                 pwd
                 ls
-                pip install -r requirements.txt
+                pip install -r ./requirements.txt
                 python3 unit_test.py
                 '''
             }
