--- a/jenkinsfile
+++ b/jenkinsfile
@@ -68,8 +68,7 @@ pipeline {
                     sh '''
                     rm -rf ./jenkins-robot
                     git clone https://github.com/nnongta/jenkins-robot.git
-                    pwd
-                    ls 
+                    cd ./jenkins-robot
                     robot plus.robot || { echo "Robot tests failed"; exit 1; }
                     '''
                 }
