--- a/jenkinsfile
+++ b/jenkinsfile
@@ -69,7 +69,8 @@ pipeline {
                     rm -rf ./jenkins-robot
                     git clone https://github.com/nnongta/jenkins-robot.git
                     cd ./jenkins-robot
-                    ls
+                    python3 -m venv venv
+                    . ./source/bin/activate
                     robot --version
                     robot plus.robot || { echo "Robot tests failed"; exit 1; }
                     '''
