--- a/jenkinsfile
+++ b/jenkinsfile
@@ -71,6 +71,7 @@ pipeline {
                     cd ./jenkins-robot
                     python3 -m venv venv
                     . ./venv/bin/activate
+                    pip install -r ./requirements.txt
                     robot --version
                     robot plus.robot || { echo "Robot tests failed"; exit 1; }
                     '''
