--- a/jenkinsfile
+++ b/jenkinsfile
@@ -68,6 +68,10 @@ pipeline {
                     sh '''
                     rm -rf ./jenkins-robot
                     git clone https://github.com/nnongta/jenkins-robot.git
+                    cd ./jenkins-robot
+                    python3 -m venv venv
+                    . ./venv/bin/activate
+                    pip install -r ./requirements.txt
                     robot plus.robot || { echo "Robot tests failed"; exit 1; }
                     '''
                 }
