--- a/jenkinsfile
+++ b/jenkinsfile
@@ -88,10 +88,11 @@ pipeline {
             agent { label 'vm3' }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')])
-                    sh returnStatus: true, script: "docker stop ${APP_NAME}"
-                    sh returnStatus: true, script: "docker rm ${APP_NAME}"
-                    sh 'echo $REGISTRY_CREDENTIALS_PSW  | docker login ghcr.io -u $REGISTRY_CREDENTIALS_USR --password-stdin'
-                    sh "docker run -dp 5001:5001 --name ${APP_NAME} ${IMAGE_NAME}:${BUILD_ID}"
+                    sh '''
+                    docker stop simple-api-container || true
+                    docker rm -f simple-api-container || true
+                    docker run -d --name simple-api-container -p 5001:5001 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+                    '''
             }
         }
     }
