--- a/jenkinsfile
+++ b/jenkinsfile
@@ -87,12 +87,14 @@ pipeline {
         stage('Deploy to VM3 (Pre-Prod)') {
             agent { label 'vm3' }
             steps {
-                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')])
+                withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]){
                     sh '''
                     docker stop simple-api-container || true
                     docker rm -f simple-api-container || true
                     docker run -d --name simple-api-container -p 5001:5001 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
                     '''
+                }
+                    
             }
         }
     }
