--- a/jenkinsfile
+++ b/jenkinsfile
@@ -85,13 +85,13 @@ pipeline {
                 }
             }
         }
-        
+
         stage('Deploy to VM3 (Pre-Prod)') {
             agent { label 'vm3' }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'github-access', usernameVariable: 'USERNAME', passwordVariable: 'TOKEN')]){
                     sh '''
-                    echo $PASSWORD | docker login ghcr.io -u $USERNAME --password-stdin
+                    echo -n $PASSWORD | docker login ghcr.io -u $USERNAME --password-stdin
                     docker stop simple-api-container || true
                     docker rm -f simple-api-container || true
                     docker run -d --name simple-api-container -p 5001:5001 $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
